--- a/frens-web/src/App.css
+++ b/frens-web/src/App.css
@@ -15,8 +15,23 @@ body {
   background-color: var(--yellow);
 }
 
-h1 {
-  margin-top: 25rem;
-  font-size: 10rem;
+label {
   color: var(--black);
+  
+}
+
+h1 {
+  font-weight: bold;
+  color: var(--black);
+}
+input {
+  border-radius: 5px;
+  height: 2.3rem;
+  border: 1px solid grey;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: var(--orange);
 }
