--- a/frens-web/src/profilePage/Card.css
+++ b/frens-web/src/profilePage/Card.css
@@ -7,7 +7,7 @@
   position: relative;
   border-radius: 0.25rem;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
-  background-color: var(--black);
+  /* background-color: var(--black); */
   transform-style: preserve-3d;
   transition: 150ms;
   cursor: pointer;
@@ -24,8 +24,8 @@
 }
 
 .card .front {
-  color: var(--yellow);
-  background-color: var(--black);
+  /* color: var(--yellow);
+  background-color: var(--black); */
   position: absolute;
   padding: 2rem;
   backface-visibility: hidden;
@@ -33,8 +33,8 @@
 }
 
 .card .back {
-  color: var(--yellow);
-  background-color: var(--black);
+  /* color: var(--yellow);
+  background-color: var(--black); */
   position: absolute;
   padding: 1rem;
   backface-visibility: hidden;
