--- a/frens-web/src/css/Header.css
+++ b/frens-web/src/css/Header.css
@@ -15,8 +15,12 @@ nav {
     align-items: center;
     display: flex;
     justify-content: space-around;
-    background-color: black;
-    border-bottom: 4px solid var(--yellow);
+    z-index: 1;
+    background: none;
+    position: absolute;
+    top: 0;
+    /* background-color: black;
+    border-bottom: 4px solid var(--yellow); */
 }
 nav ul {
     margin: 0;
